--- a/Bluetooth.html
+++ b/Bluetooth.html
@@ -30,8 +30,9 @@
          <p>Bluetooth werkt met een gHZ-radioverbinding, die een bereik kan hebben van 100 meter en signalen door materialen kan dringen (behalve metaal). Wanneer apparaten eigenlijk in elkaar 'zicht' staan en er geen materialen tussen staan, kunnen de signalen verder komen dan 100 meter. </p>
    <P>Verschillende afstanden</P>
    <p>Eigenlijk zijn er 3 bluetooth modellen, namelijk:
-    Klasse 1: voor afstanden tot 100 meter, klasse 2: voor afstanden tot 10 meter, klasse 3: voor afstanden tot 10 centimeter.
+    Klasse 1: voor afstanden tot 100 meter, klasse 2: voor afstanden tot 10 meter, klasse 3: voor afstanden tot 10 centimeter. Hieronder vallen ook weer verschillende versies, zoals bluetooth met verschillende datasnelheden (1 mbit/s, 2mbit/s).
    </p>
+   
         </div>
 
 
