--- a/Bluetooth.html
+++ b/Bluetooth.html
@@ -24,11 +24,11 @@
     </ul>
 <div id="tekst1"><!--stijl van de tekst-->
     <h1>Hoe werkt bluetooth?</h1>
-    <p>Radioverbinding</p>
+    <h2>Radioverbinding</h2>
     <p>Bluetooth is eigenlijk een radioverbinding met een freqentiegebied op een UHF-kanaal. Dit zorgt ervoor dat commnicatie en data op korte afstanden kunnen ariveren bij een ander apparaat en wordt bluetooth eigen een vervanger van korte kabels. Een bron kan met meerdere bluetooth apparaten verbinden. Er onstaat dan een zogenaamd piconetwerk. In dit netwerk kunnen maximaal acht diverse apparaten. De andere worden eigenlijk even opzij gezet.
          </p>
          <p>Bluetooth werkt met een gHZ-radioverbinding, die een bereik kan hebben van 100 meter en signalen door materialen kan dringen (behalve metaal). Wanneer apparaten eigenlijk in elkaars 'zicht' staan en er geen materialen tussen staan, kunnen de signalen verder komen dan 100 meter. </p>
-   <P>Verschillende afstanden</P>
+   <h2>Verschillende afstanden</h2>
    <p>Eigenlijk zijn er 3 bluetooth modellen, namelijk:
     Klasse 1: voor afstanden tot 100 meter, klasse 2: voor afstanden tot 10 meter, klasse 3: voor afstanden tot 10 centimeter. Hieronder vallen ook weer verschillende versies, zoals bluetooth met verschillende datasnelheden (1 mbit/s, 2mbit/s). Er worden steeds beter vesries ontwikkeld met hogere datasnelheid, lager energieverbruik en met meerdere apparaten kunnen verbinden.
    </p>
