--- a/Bluetooth.html
+++ b/Bluetooth.html
@@ -32,6 +32,12 @@
    <p>Eigenlijk zijn er 3 bluetooth modellen, namelijk:
     Klasse 1: voor afstanden tot 100 meter, klasse 2: voor afstanden tot 10 meter, klasse 3: voor afstanden tot 10 centimeter. Hieronder vallen ook weer verschillende versies, zoals bluetooth met verschillende datasnelheden (1 mbit/s, 2mbit/s). Er worden steeds beter vesries ontwikkeld met hogere datasnelheid, lager energieverbruik en versies die met meerdere apparaten kunnen verbinden.
    </p>
+   <h2>Netwerken van bluetooth</h2>
+   <p>
+    Bluetooth-netwerken worden vaak aangeduid als "piconet" en "scatternet". Een piconet is een ad-hoc-netwerk waarin één apparaat de "master" is en tot zeven andere apparaten "slaves" zijn. De master bepaalt de timing en controleert het dataverkeer binnen het netwerk. Er kunnen maximaal 255 inactieve slave-apparaten worden toegevoegd, maar slechts zeven actieve.
+    Wanneer meerdere piconets elkaar overlappen, vormen ze een scatternet. In een scatternet kunnen sommige apparaten tegelijkertijd deel uitmaken van meerdere piconets, waardoor ze als een soort brug dienen tussen verschillende netwerken. Hierdoor kan Bluetooth worden uitgebreid tot een veelzijdig netwerk.
+    Bluetooth maakt gebruik van"frequency hopping spread spectrum" (FHSS). Hierbij wisselt het signaal 1600 keer per seconde van frequentie binnen de 79 beschikbare kanalen. Dit vermindert de verstoring door andere draadloze apparaten die ook het 2,4 GHz-spectrum gebruiken, zoals Wi-Fi. Bluetooth is ook gemaakt om zo weinig mogelijk energie te gebruiken en verspillen
+    </p>
    
         </div>
 
