--- a/Bluetooth.html
+++ b/Bluetooth.html
@@ -40,6 +40,8 @@
     </p>
    
         </div>
+         <img src="Sampling_Rate_Featured_image (1).webp" alt="error">" alt="error"></img>
+
 
 
     <footer class="footer"><!--zorgt voor footer-->
