--- a/Bluetooth.html
+++ b/Bluetooth.html
@@ -40,7 +40,7 @@
     </p>
    
 
- <img src="url" alt="1703794500_bluetooth (1).pgn">
+ <img src="1703794500_bluetooth (1).png" alt="error">
         </div>
       
 
