--- a/Toepassingenlaag.html
+++ b/Toepassingenlaag.html
@@ -20,6 +20,9 @@
     <div id='tekst1'><!--stijl van de tekst-->
 
       <h1>Uitleg toepassingslaag</h1>
+      <h2>Wat behoort tot de toepassingslaag</h2>
+<p>De toepassingslaag omvat softwaretoepassingen die netwerkcommunicatie vereisen, zoals webbrowsers. Deze applicaties gebruiken netwerken om gegevens te verzenden en te ontvangen. Toepassingen maken gebruik van verschillende protocollen, zoals HTTP (voor webverkeer), SMTP (voor e-mail) en FTP (voor bestandsoverdracht). Elk protocol bepaalt specifieke regels voor hoe gegevens worden verzonden en ontvangen. De toepassingslaag zorgt ervoor dat gegevens op een begrijpelijke manier worden getoond. Dit gaat om activiteiten, zoals codering, compressie en conversie van gegevens formaten (bijvoorbeeld van tekst naar HTML). Deze laag kan ook verantwoordelijk zijn voor het beheren van sessies tussen applicaties, inclusief autorisatie, zodat gebruikers veilig toegang hebben tot netwerkfuncties. De toepassingslaag zorgt ervoor dat gebruikers eenvoudig netwerk middelen kunnen gebruiken zonder dat ze zich met de onderliggende en lastige technologie hoeven bezig te houden. De toepassingslaag zorgt vooral voor de brug tussen de eindgebruikers en de netwerkfuncties.</p>
+
       <p>De laatste laag van het 3-lagenmodel is de toepassingslaag. </p>
 
         <footer class="footer"><!--zorgt voor footer-->
