--- a/Toepassingenlaag.html
+++ b/Toepassingenlaag.html
@@ -23,7 +23,7 @@
       <p>De toepassingslaag in netwerken binnen computerarchitectuur is de hoogste laag in het OSI-model en vormt eigenlijk een tussenstation tussen de eindgebruikers en de onderliggende netwerken. Deze laag is verantwoordelijk voor het functioneren met softwaretoepassingen en het verloop van de communicatie tussen netwerken.</p>
       <h2>Wat behoort tot de toepassingslaag</h2>
 <p>De toepassingslaag omvat softwaretoepassingen die netwerkcommunicatie vereisen, zoals webbrowsers. Deze applicaties gebruiken netwerken om gegevens te verzenden en te ontvangen. Toepassingen maken gebruik van verschillende protocollen, zoals HTTP (voor webverkeer), SMTP (voor e-mail) en FTP (voor bestandsoverdracht). Elk protocol bepaalt specifieke regels voor hoe gegevens worden verzonden en ontvangen. De toepassingslaag zorgt ervoor dat gegevens op een begrijpelijke manier worden getoond. Dit gaat om activiteiten, zoals codering, compressie en conversie van gegevens formaten (bijvoorbeeld van tekst naar HTML). Deze laag kan ook verantwoordelijk zijn voor het beheren van sessies tussen applicaties, inclusief autorisatie, zodat gebruikers veilig toegang hebben tot netwerkfuncties. De toepassingslaag zorgt ervoor dat gebruikers eenvoudig netwerk middelen kunnen gebruiken zonder dat ze zich met de onderliggende en lastige technologie hoeven bezig te houden. De toepassingslaag zorgt vooral voor de brug tussen de eindgebruikers en de netwerkfuncties.</p>
-
+<p>API's kunnen ook gegevensoverdrachtstypen definiëren (zoals JSON of XML) die worden gebruikt om gegevens op een gestructureerde manier te verzenden. Dit is essentieel voor de uitwisseling van informatie tussen apps en services.</p>
    
 
         <footer class="footer"><!--zorgt voor footer-->
