--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -19,19 +19,18 @@
             <li><a href='Compressie.html'>Compressietechnieken</a></li>
             <li><a href="Computerarchitectuur.html">Computerarchitectuur</a></li>
             <li><a href="Bluetooth.html">Bluetooth werking </a></li>
-            <ul id="ul2">
-              <div class="Computerarchitectuur">
-                  <button class="dropbtn"></button>
-                  <div class="dropdown-content">
-                    <li><a href="Fysieke laag.html">Fysieke laag</a></li>
-                    <li><a href="Logische laag.html">Logische laag</a></li>
-                    <li><a href="Toepassingenlaag.html">Toepassingslaag</a></li>
-                  </ul>
-
+  
         </ul>
 
   
-          
+        <ul id="ul2">
+          <div class="Computerarchitectuur">
+              <button class="dropbtn"></button>
+              <div class="dropdown-content">
+                <li><a href="Fysieke laag.html">Fysieke laag</a></li>
+                <li><a href="Logische laag.html">Logische laag</a></li>
+                <li><a href="Toepassingenlaag.html">Toepassingslaag</a></li>
+              </ul> </div>
         
         <div id='tekst1'><!--stijl van de tekst-->
 
