--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -25,7 +25,7 @@
   
         <ul id="ul2">
           <div class="Computerarchitectuur">
-              <button class="dropbtn"></button>
+              <button class="Computerarchitectuur"></button>
               <div class="dropdown-content">
                 <li><a href="Fysieke laag.html">Fysieke laag</a></li>
                 <li><a href="Logische laag.html">Logische laag</a></li>
