--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -21,7 +21,7 @@
             <li><a href="Bluetooth.html">Bluetooth werking </a></li>
   
         </ul>
-
+        <img src="20241016-151522.jpg" alt="error">
   
        
         <div id='tekst1'><!--stijl van de tekst-->
