--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -21,6 +21,9 @@
             <li><a href="Bluetooth.html">Bluetooth werking </a></li>
   
         </ul>
+
+        <h2>3-lagemodel telefoon</h2>
+        <p>Op de afbeelding hieronder is het 3-lagenmodel van een telefoon afgebeeld op basis van de toepassings-, logische en fysieke laag.</p> <p>Bij de lagen zijn bijhorende apps en functies aangegeven.</p>
         <img src="20241016_151522.jpg" alt="error">
   
        
