--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -17,7 +17,7 @@
             <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
             <li><a href='Algemene informatie.html'>Werking van de Computer</a></li>
             <li><a href='Compressie.html'>Compressietechnieken</a></li>
-            <li><a href="Computerarchitectuur.html">Computerarchitectuur</a></li>
+            <li><a href="Computerarchitectuur.html">Computerarchitectuur</a><a href="Toepassingenlaag.html">Toepassingslaag</a></li>
             <li><a href="Bluetooth.html">Bluetooth werking </a></li>
   
         </ul>
