--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -12,6 +12,7 @@
         
      <br>
         <ul id="ul1"><!--zorgt voor menu op elke pagina-->
+            <ul class="top-level-menu"></ul>
             <li><a href='index.html'>Home</a></li>
             <li><a href="binairstelsel.html">Binaire stelsel</a></li>
             <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
