--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -18,14 +18,12 @@
             <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
             <li><a href='Algemene informatie.html'>Werking van de Computer</a></li>
             <li><a href='Compressie.html'>Compressietechnieken</a></li>
-           
-         <li><a href="Computerarchitectuur.html">Computerarchitectuur</a>
+          <li><a href="Computerarchitectuur.html">Computerarchitectuur</a>
             <ul class="second-level-menu">
                 <li><a href="Toepassingenlaag.html">Toepassingenlaag</a></li>
                 <li><a href="Logische laag.html">Logische laag</a></li>
-                <li><a href="Fysieke laag.html">Fysieke laag</a></li></ul>
-                
-            <li><a href="Bluetooth.html">Bluetooth werking </a></li>
+                <li><a href="Fysieke laag.html">Fysieke laag</a></li>
+  <li><a href="Bluetooth.html">Bluetooth werking </a></li>
   
         </ul>
 
