--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -22,7 +22,7 @@
             <ul class="second-level-menu">
                 <li><a href="Toepassingenlaag.html">Toepassingenlaag</a></li>
                 <li><a href="Logische laag.html">Logische laag</a></li>
-                <li><a href="Fysieke laag.html">Fysieke laag</a></li>
+                <li><a href="Fysieke laag.html">Fysieke laag</a></li></ul>
   <li><a href="Bluetooth.html">Bluetooth werking </a></li>
   
         </ul>
