--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -18,6 +18,7 @@
             <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
             <li><a href='Algemene informatie.html'>Werking van de Computer</a></li>
             <li><a href='Compressie.html'>Compressietechnieken</a></li>
+            <ul class="top-level-menu">
           <li><a href="Computerarchitectuur.html">Computerarchitectuur</a>
             <ul class="second-level-menu">
                 <li><a href="Toepassingenlaag.html">Toepassingenlaag</a></li>
