--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -26,7 +26,8 @@
                 <li><a href="Logische laag.html">Logische laag</a></li>
                 <li><a href="Fysieke laag.html">Fysieke laag</a></li></ul>
             </ul>
-  
+  </ul>
+  </menu>
 
   
         
