--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -25,6 +25,7 @@
                 <li><a href="Toepassingenlaag.html">Toepassingenlaag</a></li>
                 <li><a href="Logische laag.html">Logische laag</a></li>
                 <li><a href="Fysieke laag.html">Fysieke laag</a></li>
+            </menu>
             </ul>
             </li>
             </ul>
