--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -19,9 +19,9 @@
             <li><a href='Algemene informatie.html'>Werking van de Computer</a></li>
             <li><a href='Compressie.html'>Compressietechnieken</a></li>
             <li><a href="Bluetooth.html">Bluetooth werking </a></li> 
-            <menu class="top-level-menu">
+            <element class="top-level-menu">
           <li><a href="Computerarchitectuur.html">Computerarchitectuur</a>
-            <menu class="second-level-menu">
+            <element class="second-level-menu">
                 <li><a href="Toepassingenlaag.html">Toepassingenlaag</a></li>
                 <li><a href="Logische laag.html">Logische laag</a></li>
                 <li><a href="Fysieke laag.html">Fysieke laag</a></li>
