--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -20,7 +20,7 @@
             <li><a href='Compressie.html'>Compressietechnieken</a></li>
             <li><a href="Bluetooth.html">Bluetooth werking </a></li> 
             <ul class="top-level-menu">
-              <li><a href="Computerarchitectuur.html">Computerarchitectuur</a>
+              <li><a href="Computerarchitectuur.html">Computerarchitectuur</a></li>
                 <ul class="second-level-menu">
                     <li><a href="Toepassingenlaag.html">Toepassingenlaag</a></li>
                     <li><a href="Logische laag.html">Logische laag</a></li>
