--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -37,7 +37,7 @@
 
             <h2>3-lagemodel telefoon</h2>
         <p>Op de afbeelding hieronder is het 3-lagenmodel van een telefoon afgebeeld op basis van de toepassings-, logische en fysieke laag.</p> <p>Bij de lagen zijn bijhorende apps en functies aangegeven.</p>
-        <img src="20241016_151522.jpg" alt="error">
+        <a href="20241016_151522 (1).jpg" target="Afbeelding werking 3-lagenmodel bij een telefoon">
 
             <footer class="footer"><!--zorgt voor footer-->
                 <p>&copy;Maker website: Eveline Nout</p>
