--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -38,7 +38,7 @@
 
             <h2>3-lagemodel telefoon</h2>
         <p>Op de afbeelding hieronder is het 3-lagenmodel van een telefoon afgebeeld op basis van de toepassings-, logische en fysieke laag.</p> <p>Bij de lagen zijn bijhorende apps en functies aangegeven.</p>
-        <a href="20241016_151522 (1).jpg" target="Afbeelding werking 3-lagenmodel bij een telefoon">
+        <a href="20241016_151522 (1).jpg">Afbeelding van werking 3-lagemodel in een telefoon</a><!--link naar website-->
 
             <footer class="footer"><!--zorgt voor footer-->
                 <p>&copy;Maker website: Eveline Nout</p>
