--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -18,14 +18,15 @@
             <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
             <li><a href='Algemene informatie.html'>Werking van de Computer</a></li>
             <li><a href='Compressie.html'>Compressietechnieken</a></li>
-            <li><a href="Bluetooth.html">Bluetooth werking </a></li> 
+            <li><a href="Bluetooth.html">Bluetooth werking </a></li>
+            <ul class="top-level-menu"></ul> 
            <li><a href="Computerarchitectuur.html">Computerarchitectuur</a>
                 <ul class="second-level-menu">
                     <li><a href="Toepassingenlaag.html">Toepassingenlaag</a></li>
                     <li><a href="Logische laag.html">Logische laag</a></li>
                     <li><a href="Fysieke laag.html">Fysieke laag</a></li>
          
-           
+       </ul>    
     </ul>
   </menu>
  
