--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -11,6 +11,7 @@
             
         
      <br>
+     <ul id="ul1"><!--zorgt voor menu op elke pagina-->
         <ul class="top-level-menu"></ul>
             <li><a href='index.html'>Home</a></li>
             <li><a href="binairstelsel.html">Binaire stelsel</a></li>
