--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -12,13 +12,13 @@
         
      <br>
      <ul id="ul1"><!--zorgt voor menu op elke pagina-->
-        <ul id="top-level-menu"></ul>
             <li><a href='index.html'>Home</a></li>
             <li><a href="binairstelsel.html">Binaire stelsel</a></li>
             <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
             <li><a href='Algemene informatie.html'>Werking van de Computer</a></li>
             <li><a href='Compressie.html'>Compressietechnieken</a></li>
             <li><a href="Bluetooth.html">Bluetooth werking </a></li>
+            <ul id="top-level-menu">
            <li><a href="Computerarchitectuur.html">Computerarchitectuur</a>
                 <ul id="second-level-menu">
                     <li><a href="Toepassingenlaag.html">Toepassingenlaag</a></li>
