--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -19,7 +19,7 @@
             <li><a href='Compressie.html'>Compressietechnieken</a></li>
             <li><a href="Bluetooth.html">Bluetooth werking </a></li>
             <ul id="top-level-menu">
-           <a href="Computerarchitectuur.html">Computerarchitectuur</a>
+          <li><a href="Computerarchitectuur.html">Computerarchitectuur</a></li>
                 <ul id="second-level-menu">
                     <li><a href="Toepassingenlaag.html">Toepassingenlaag</a></li>
                     <li><a href="Logische laag.html">Logische laag</a></li>
