--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -20,7 +20,7 @@
             <li><a href="Bluetooth.html">Bluetooth werking </a></li>
             <ul id="top-level-menu">
           <li><a href="Computerarchitectuur.html">Computerarchitectuur</a>
-                <ul id="second-level-menu">
+                <ul class="second-level-menu">
                     <li><a href="Toepassingenlaag.html">Toepassingenlaag</a></li>
                     <li><a href="Logische laag.html">Logische laag</a></li>
                     <li><a href="Fysieke laag.html">Fysieke laag</a></li>
