--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -44,7 +44,11 @@
             <h2>3-lagemodel telefoon</h2>
         <p>Op de afbeelding hieronder is het 3-lagenmodel van een telefoon afgebeeld op basis van de toepassings-, logische en fysieke laag.</p> <p>Bij de lagen zijn bijhorende apps en functies aangegeven.</p>
         <a href="20241016_151522 (1).jpg">Afbeelding van werking 3-lagemodel in een telefoon</a><!--link naar website-->
-</div>  
+
+        <img src="what-is-computer-architecture-structure.jpg" alt="error">
+
+      </div>  
+
             <footer class="footer"><!--zorgt voor footer-->
                 <p>&copy;Maker website: Eveline Nout</p>
                 <p>Vlietland College A6A</p>
