--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -20,7 +20,7 @@
             <li><a href='Compressie.html'>Compressietechnieken</a></li>
             <li><a href="Bluetooth.html">Bluetooth werking </a></li>
                <div class="dropdown">
-                    <button class="Computerarchitectuur">Computerarchitectuur</button>
+                    <button class="dropbtn">Computerarchitectuur</button>
                     <div class="dropdown-content">
                       <a href="Toepassingenlaag.html">Toepassingenlaag</a>
                       <a href="Logische laag.html">Logische laag</a>
