--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -22,9 +22,9 @@
             <div class="dropdown">
               <button class="dropbtn">Computerarchitectuur</button>
               <div class="dropdown-content">
-                <a href="Toepassingenlaag.html">Toepassingenlaag</a>
-                <a href="Logische laag.html">Logische laag</a>
-                <a href="Fysieke laag.html">Fysieke laag</a>
+                <li><a href="Toepassingenlaag.html">Toepassingenlaag</a></li>
+              <li><a href="Logische laag.html">Logische laag</a></li>
+              <li><a href="Fysieke laag.html">Fysieke laag</a></li>
      
     
   </menu>
