--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -20,7 +20,7 @@
             <li><a href='Compressie.html'>Compressietechnieken</a></li>
             <li><a href="Bluetooth.html">Bluetooth werking </a></li>
             <div class="dropdown">
-              <button class="dropbtn">Computerarchitectuur</button>
+             <li> <button class="dropbtn">Computerarchitectuur</button></li>
               <div class="dropdown-content">
                 <li><a href="Toepassingenlaag.html">Toepassingenlaag</a></li>
               <li><a href="Logische laag.html">Logische laag</a></li>
