--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -23,9 +23,9 @@
               <button class="dropbtn">
               <li><a href="Computerarchitectuur.html">Computerarchitectuur</a></li></button>
               <div class="dropdown-content">
-                <li><a href="Toepassingenlaag.html">Toepassingenlaag</a></li>
-              <li><a href="Logische laag.html">Logische laag</a></li>
-              <li><a href="Fysieke laag.html">Fysieke laag</a></li>
+                <a href="Toepassingenlaag.html">Toepassingenlaag</a></li>
+              <a href="Logische laag.html">Logische laag</a></li>
+              <a href="Fysieke laag.html">Fysieke laag</a>
      
     
   </menu>
