--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -19,15 +19,13 @@
             <li><a href='Algemene informatie.html'>Werking van de Computer</a></li>
             <li><a href='Compressie.html'>Compressietechnieken</a></li>
             <li><a href="Bluetooth.html">Bluetooth werking </a></li>
-           <ul class="top-level-menu">
          <div class="dropdown">
               <button class="dropbtn">
               <li><a href="Computerarchitectuur.html">Computerarchitectuur</a></li></button>
               <div class="dropdown-content">
-                <ul class="second-level-menu">
-            <li><a href="Toepassingenlaag.html">Toepassingenlaag</a></li>
-            <li> <a href="Logische laag.html">Logische laag</a></li>
-             <li> <a href="Fysieke laag.html">Fysieke laag</a></li>
+            <a href="Toepassingenlaag.html">Toepassingenlaag</a>
+             <a href="Logische laag.html">Logische laag</a>
+             <a href="Fysieke laag.html">Fysieke laag</a>
      </ul>
     
   </menu>
