--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -26,9 +26,11 @@
             <a href="Toepassingenlaag.html">Toepassingenlaag</a>
              <a href="Logische laag.html">Logische laag</a>
              <a href="Fysieke laag.html">Fysieke laag</a>
-     </ul>
-    
-  </menu>
+             </div>
+             </div>
+             </ul>
+             </menu
+  
 
   </body>
   </html>
