--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -10,7 +10,7 @@
      <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
      <li><a href='Algemene informatie.html'>Werking van de Computer</a></li>
      <li><a href='Compressie.html'>Compressietechnieken</a></li>
-     <li><a href="Bluetooth.html">Bluetooth werking </a></li>
+     <li><a href="Bluetooth.html">Bluetooth werking </a></li></ul>
      
          <a href="Computerarchitectuur.html">Computerarchitectuur</a>
          <ul class="second-level-menu">
