--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -27,6 +27,9 @@
         
         </ul>
         </ul>
+    </li>
+        </menu>
+
             
     <div id='tekst1'><!--stijl van de tekst-->
 
