--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -17,9 +17,9 @@
             <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
             <li><a href='Algemene informatie.html'>Werking van de Computer</a></li>
             <li><a href='Compressie.html'>Compressietechnieken</a></li>
-            <ul class="top-level-menu">
+            <ul id="top-level-menu">
             <li><a href="Computerarchitectuur.html">Computerarchitectuur</a></li>
-            <ul class="second-level-menu">
+            <ul id="second-level-menu">
                 <li><a href="Toepassingenlaag.html"></a></li>
                 <li><a href="Logische laag.html"></a></li>
                 <li><a href="Logische laag.html"></a></li></ul>      
