--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -16,9 +16,11 @@
             <li><a href="binairstelsel.html">Binaire stelsel</a></li>
             <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
             <li><a href='Algemene informatie.html'>Werking van de Computer</a></li>
-            <li><a href='Compressie.html'>Compressietechnieken</a></li>
-            <ul id="top-level-menu">
-            <li><a href="Computerarchitectuur.html">Computerarchitectuur</a></li>
+            <li><a href='Compressie.html'>Compressietechnieken</a></li></ul>
+        
+                <ul id="ul2">
+                    <menu class="top-level-menu">
+            <li><a href="Computerarchitectuur.html">Computerarchitectuur</a>
             <ul id="second-level-menu">
                 <li><a href="Toepassingenlaag.html"></a></li>
                 <li><a href="Logische laag.html"></a></li>
