--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -19,7 +19,7 @@
             <li><a href='Compressie.html'>Compressietechnieken</a></li></ul>
         
                 <ul id="ul2">
-                    <menu class="top-level-menu">
+                    <ul id="top-level-menu">
             <li><a href="Computerarchitectuur.html">Computerarchitectuur</a>
             <ul id="second-level-menu">
                 <li><a href="Toepassingenlaag.html"></a></li>
