--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -16,7 +16,8 @@
             <li><a href="binairstelsel.html">Binaire stelsel</a></li>
             <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
             <li><a href='Algemene informatie.html'>Werking van de Computer</a></li>
-            <li><a href='Compressie.html'>Compressietechnieken</a></li></ul>
+            <li><a href='Compressie.html'>Compressietechnieken</a></li>
+            <li><a href="Bluetooth.html">Bluetooth werking </a></li></ul>
         
                 <ul id="ul2">
                     <ul id="top-level-menu">
