--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -25,7 +25,7 @@
             <ul id="second-level-menu">
                 <li><a href="Toepassingenlaag.html"></a></li>
                 <li><a href="Logische laag.html"></a></li>
-                <li><a href="Logische laag.html"></a></li></ul>      
+                <li><a href="Fysieke laag.html"></a></li></ul>      
                      <li><a href="Bluetooth.html">Bluetooth werking </a></li>
         
         </ul>
