--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -23,9 +23,9 @@
                     <ul id="top-level-menu">
             <li><a href="Computerarchitectuur.html">Computerarchitectuur</a>
             <ul id="second-level-menu">
-                <li><a href="Toepassingenlaag.html"></a></li>
-                <li><a href="Logische laag.html"></a></li>
-                <li><a href="Fysieke laag.html"></a></li></ul>      
+                <li><a href="Toepassingenlaag.html">Toepassingenlaag</a></li>
+                <li><a href="Logische laag.html"></a>Logische laag</li>
+                <li><a href="Fysieke laag.html"></a>Fysieke laag</li></ul>      
                      <li><a href="Bluetooth.html">Bluetooth werking </a></li>
         
         </ul>
