--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -24,8 +24,8 @@
             <li><a href="Computerarchitectuur.html">Computerarchitectuur</a>
             <ul id="second-level-menu">
                 <li><a href="Toepassingenlaag.html">Toepassingenlaag</a></li>
-                <li><a href="Logische laag.html"></a>Logische laag</li>
-                <li><a href="Fysieke laag.html"></a>Fysieke laag</li></ul>      
+                <li><a href="Logische laag.html">Logische laag</a></li>
+                <li><a href="Fysieke laag.html">Fysieke laag</a></li></ul>      
                      <li><a href="Bluetooth.html">Bluetooth werking </a></li>
         
         </ul>
