--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -17,8 +17,7 @@
             <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
             <li><a href='Algemene informatie.html'>Werking van de Computer</a></li>
             <li><a href='Compressie.html'>Compressietechnieken</a></li>
-            <li><a href="Bluetooth.html">Bluetooth werking </a></li></ul>
-        
+            <li><a href="Bluetooth.html">Bluetooth werking </a></li>
                 <ul id="ul2">
                     <ul id="top-level-menu">
             <li><a href="Computerarchitectuur.html">Computerarchitectuur</a>
