--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -20,8 +20,17 @@
         <li><a href='Compressie.html'>Compressietechnieken</a></li>
         <li><a href="Computerarchitectuur.html">Computerarchitectuur</a></li>
         <li><a href="Bluetooth.html">Bluetooth werking </a></li>
+        <ul id="ul2">
+          <ul id="top-level-menu">
+  <li><a href="Computerarchitectuur.html">Computerarchitectuur</a>
+  <ul id="second-level-menu">
+      <li><a href="Toepassingenlaag.html">Toepassingenlaag</a></li>
+      <li><a href="Logische laag.html">Logische laag</a></li>
+      <li><a href="Fysieke laag.html">Fysieke laag</a></li></ul>      
+           <li><a href="Bluetooth.html">Bluetooth werking </a></li>
         
     </ul>
+    
 <div id="tekst1"><!--stijl van de tekst-->
    <h1>Uitleg binaire stelsel</h1>
    <h2>Binaire stelsel:</h2> 
