--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -24,11 +24,9 @@
             <ul class="second-level-menu">
                 <li><a href="Toepassingenlaag.html">Toepassingenlaag</a></li>
                 <li><a href="Logische laag.html">Logische laag</a></li>
-                <li><a href="Fysieke laag.html">Fysieke laag</a></li></ul>      
+                <li><a href="Fysieke laag.html">Fysieke laag</a></li>     
                      
         
-        </ul>
-        </ul>
     </li>
         </menu>
 
