--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -21,8 +21,8 @@
         <ul id="ul2">
             <li><a href="Computerarchitectuur.html">Computerarchitectuur</a>
             <ul class="second-level-menu">
-                <li><a href="Toepassingenlaag.html">Toepassingenlaag</a></li>
-                <li><a href="Logische laag.html">Logische laag</a></li>
+                <li><a href="Toepassingenlaag.html">Toepassingenlaag</a>
+                <li><a href="Logische laag.html">Logische laag</a>
                 <li><a href="Fysieke laag.html">Fysieke laag</a></li> 
                 </ul>
                 </li>
